update meta data

--- a/part_1/registration.html
+++ b/part_1/registration.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <!-- Begin Header and menue
-	================================================== -->
     <div class="container">
+        <!-- Begin Header and menu
+	================================================== -->
         <div class="placeholder">
             <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
                 <div class="header-inner">
@@ -39,62 +39,64 @@
                 </nav>
             </div>
         </div>
-    </div>
-    <!-- End Header and menue
+
+        <!-- End Header and menue
 	================================================== -->
 
-    <!-- Begin Body content
+        <!-- Begin Body content
 	================================================== -->
-    <main>
-        <div class="form-container">
-            <form class="registration-form">
-                <div>
-                    <h3>Create New Account</h3>
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>User Name </label>
-                    <input type="text" id="name">
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Email </label>
-                    <input type="text" id="email">
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Password </label>
-                    <input type="password" id="password">
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Comfirm Password </label>
-                    <input type="password" id="confirmPassword">
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Country </label>
-                    <select class="select-box">
-                        <option value="Canada">Canada</option>
-                        <option value="USA">USA</option>
-                    </select>
-                </div>
-                <div class="form-group-lable-and-input">
-                    <div id="user-agreement">
-                        <input class="checkbox" type="checkbox" value="user-agreement">
-                        Check here to indicate that you have read and agree to TY's
-                        <a class="legal-link" href="/4ww3project/part_1/#">terms of Service </a> "nd acknowledge
-                        TY's
-                        <a class="legal-link" href="/4ww3project/part_1/#"> Privacy Policy </a>.
+        <section>
+            <div class="form-container">
+                <form class="registration-form">
+                    <div>
+                        <h3>Create New Account</h3>
                     </div>
-                </div>
+                    <div class="form-group-lable-and-input">
+                        <label>User Name </label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Email </label>
+                        <input type="text" id="email">
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Password </label>
+                        <input type="password" id="password">
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Comfirm Password </label>
+                        <input type="password" id="confirmPassword">
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Country </label>
+                        <select class="select-box">
+                            <option value="Canada">Canada</option>
+                            <option value="USA">USA</option>
+                        </select>
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <div id="user-agreement">
+                            <input class="checkbox" type="checkbox" value="user-agreement">
+                            Check here to indicate that you have read and agree to TY's
+                            <a class="legal-link" href="/4ww3project/part_1/#">terms of Service </a> "nd acknowledge
+                            TY's
+                            <a class="legal-link" href="/4ww3project/part_1/#"> Privacy Policy </a>.
+                        </div>
+                    </div>
 
-                <div>
-                    <input class="btn" type="button" value="Submit">
-                    <p class="message">Already have account? <a href="/4ww3project/part_1/registration.html">&nbsp;Log
-                            in</a></p>
-                </div>
-            </form>
-        </div>
+                    <div>
+                        <input class="btn" type="button" value="Submit">
+                        <p class="message">Already have account? <a
+                                href="/4ww3project/part_1/registration.html">&nbsp;Log
+                                in</a></p>
+                    </div>
+                </form>
+            </div>
 
-    </main>
-    <!-- End Body content
+        </section>
+        <!-- End Body content
 	================================================== -->
+    </div>
 
     <!-- Begin Footer
 	================================================== -->
