--- a/part_1/submission.html
+++ b/part_1/submission.html
@@ -18,9 +18,9 @@
 </head>
 
 <body>
-        <!-- Begin Header and menue
-	================================================== -->
     <div class="container">
+        <!-- Begin Header and menu
+	================================================== -->
         <div class="placeholder">
             <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
                 <div class="header-inner">
@@ -40,59 +40,59 @@
                 </nav>
             </div>
         </div>
-    </div>
-    <!-- End Header and menue
+        <!-- End Header and menue
 	================================================== -->
 
-    <!-- Begin Body content
+        <!-- Begin Body content
 	================================================== -->
-    <main>
-        <div class="form-container">
-            <form class="register">
-                <div>
-                    <h3>Submit a New Coffee Shop </h3>
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Name of Coffee Shop</label>
-                    <input type="text" id="name">
-                </div>
-                <div class="form-group-lable-and-input">
-                    <label>Description</label>
-                    <div><textarea placeholder="e.g. A great coffee shop in Hamilton downtown"></textarea></div>
-                </div>
+        <section>
+            <div class="form-container">
+                <form class="register">
+                    <div>
+                        <h3>Submit a New Coffee Shop </h3>
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Name of Coffee Shop</label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="form-group-lable-and-input">
+                        <label>Description</label>
+                        <div><textarea placeholder="e.g. A great coffee shop in Hamilton downtown"></textarea></div>
+                    </div>
 
-                <div class="form-group-lable-and-input ">
-                    <label>Location</label>
-                    <div class="flex-left">
-                        <div>
-                            <label>Latitude:</label>
-                            <input type="text" id="form-lattitude" placeholder="e.g. 44.00000">
-                        </div>
-                        <div>
-                            <label>Longitude:</label>
-                            <input type="text" id="form-longitude" placeholder="e.g. -70.00000">
+                    <div class="form-group-lable-and-input ">
+                        <label>Location</label>
+                        <div class="flex-left">
+                            <div>
+                                <label>Latitude:</label>
+                                <input type="text" id="form-lattitude" placeholder="e.g. 44.00000">
+                            </div>
+                            <div>
+                                <label>Longitude:</label>
+                                <input type="text" id="form-longitude" placeholder="e.g. -70.00000">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group-lable-and-input flex-left">
-                    <label>Upload Image</label>
-                    <input type="file">
-                </div>
+                    <div class="form-group-lable-and-input flex-left">
+                        <label>Upload Image</label>
+                        <input type="file">
+                    </div>
 
-                <div class="form-group-lable-and-input flex-left">
-                    <label>Upload Video</label>
-                    <input type="file">
-                </div>
+                    <div class="form-group-lable-and-input flex-left">
+                        <label>Upload Video</label>
+                        <input type="file">
+                    </div>
 
-                <div>
-                    <input class="btn" type="button" value="Submit">
-                </div>
-            </form>
-        </div>
-
-    </main>
-    <!-- End Body content
+                    <div>
+                        <input class="btn" type="button" value="Submit">
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!-- End Body content
 	================================================== -->
+    </div>
+
 
     <!-- Begin Footer
 	================================================== -->
