--- a/part_1/results_sample.html
+++ b/part_1/results_sample.html
@@ -50,7 +50,7 @@
 
     <main>
       <header class="welcome-section">
-        <h2 class="title">Search Result</font></h2>
+        <h2 class="title">Search Result</h2>
       </header>
 
 			<!-- Sample Objects -->
