--- a/part_1/individual_sample.html
+++ b/part_1/individual_sample.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable = no">
     <!-- Metadata for mobile user saves the page -->
     <title>Individual Coffee Shop - Seek Coffee</title>
-    <link rel="apple-touch-icon-precomposed" href="img/icon.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- <link rel="apple-touch-icon-precomposed" href="img/icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes"> -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" sizes="192x192" href="img/icon.png">
     <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>    -->
