fix errors in validator

--- a/part_1/search.html
+++ b/part_1/search.html
@@ -27,7 +27,7 @@
 ================================================== -->
   <div class="container">
     <div class="placeholder">
-      <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;" />
+      <div class="header" style="background-image: url('img/title-pic copy.jpg'); background-repeat: no-repeat;">
       <div class="header-inner">
         <div class="header-side">
           <h1 class="header-side-title">Seek Coffee</h1>
@@ -56,7 +56,7 @@
         </div>
         <div class="search-bar">
           <label>Name: </label>
-          <input type="text" id="name"></input>
+          <input type="text" id="name"/>
         </div>
 
         <!-- Drop down menu, filter of stars
@@ -64,11 +64,11 @@
         <div class="form-group-lable-and-input">
           <label>Stars: </label>
           <select class="select-box">
-            <option key="1" value="1">1</option>
-            <option key="2" value="2">2</option>
-            <option key="3" value="3">3</option>
-            <option key="4" value="4">4</option>
-            <option key="5" value="5">5</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
           </select>
         </div>
 
@@ -88,6 +88,7 @@
       <p> Didn't find your loved one? <a href="submission.html">Add it!</a></p>
     </div>
   </div>
+</div>
 
   <footer>
     <hr>
