--- a/part_2/individual_sample.html
+++ b/part_2/individual_sample.html
@@ -42,7 +42,7 @@
    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
-   <!-- External JavaScript file -->
+   <!-- External JavaScript -->
    <script type="text/javascript" src="assets/js/map.js"></script>
 
 </head>
