form validation and update map functions

--- a/part_2/individual_sample.html
+++ b/part_2/individual_sample.html
@@ -47,7 +47,8 @@
 
 </head>
 
-<body onload="loadMap();">    
+<!-- when load the page, it will call loadMapToIndividualPage function to load the map to the page -->
+<body onload="loadMapToIndividualPage();">    
     <div class="container">
         <!-- Begin Header and menu
 	================================================== -->
