--- a/part_2/registration.html
+++ b/part_2/registration.html
@@ -53,6 +53,7 @@
 	================================================== -->
         <section>
             <div class="form-container" >
+                <!-- when user click the submit button, it will call validateRegistrationForm to validate the form first -->
                 <form class="registration-form" id="form-registration" autocomplete="off" onsubmit="return validateRegistrationForm()">
                     <div>
                         <h3>Create New Account</h3>
