add a seach around me function

--- a/part_2/results_sample.html
+++ b/part_2/results_sample.html
@@ -32,7 +32,7 @@
   <script type="text/javascript" src="assets/js/searchmap.js"></script>
 </head>
 
-<body onload="loadMap();">
+<body onload="Initalize()">
   <div class="container">
 		<!-- Begin Header and menu
 	================================================== -->
