--- a/part_2/individual_sample.html
+++ b/part_2/individual_sample.html
@@ -43,7 +43,7 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
    <!-- External JavaScript -->
-   <script type="text/javascript" src="assets/js/map.js"></script>
+   <script type="text/javascript" src="assets/js/individual_sample_map.js"></script>
 
 </head>
 
